some extra data exploration

--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -3040,6 +3040,336 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Vendor</th>\n",
+       "      <th>Batch</th>\n",
+       "      <th>Plate_Map_Name</th>\n",
+       "      <th>Assay_Plate_Barcode</th>\n",
+       "      <th>Modality</th>\n",
+       "      <th>Images_per_well</th>\n",
+       "      <th>Sites-SubSampled</th>\n",
+       "      <th>Binning</th>\n",
+       "      <th>Magnification</th>\n",
+       "      <th>Number_of_channels</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Size_MB_std</th>\n",
+       "      <th>sphering</th>\n",
+       "      <th>value_95_replicating</th>\n",
+       "      <th>Percent_Replicating</th>\n",
+       "      <th>channel_names</th>\n",
+       "      <th>brightfield_z_plane_used</th>\n",
+       "      <th>feature_channels_found</th>\n",
+       "      <th>Percent_Matching</th>\n",
+       "      <th>value_95_matching</th>\n",
+       "      <th>cell_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.218493</td>\n",
+       "      <td>56.666667</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>23.255814</td>\n",
+       "      <td>0.356314</td>\n",
+       "      <td>2047342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.287125</td>\n",
+       "      <td>47.777778</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>18.604651</td>\n",
+       "      <td>0.353686</td>\n",
+       "      <td>2047342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>1siteSubSample_Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.165562</td>\n",
+       "      <td>54.444444</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>18.604651</td>\n",
+       "      <td>0.210178</td>\n",
+       "      <td>518568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>1siteSubSample_Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.288096</td>\n",
+       "      <td>38.888889</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>13.953488</td>\n",
+       "      <td>0.282212</td>\n",
+       "      <td>518568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>2siteSubSample_Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.170352</td>\n",
+       "      <td>57.777778</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>23.255814</td>\n",
+       "      <td>0.241135</td>\n",
+       "      <td>1032116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>2siteSubSample_Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.330511</td>\n",
+       "      <td>37.777778</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>20.930233</td>\n",
+       "      <td>0.339772</td>\n",
+       "      <td>1032116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>3siteSubSample_Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.184155</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>23.255814</td>\n",
+       "      <td>0.286397</td>\n",
+       "      <td>1516909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>Yokogawa_US</td>\n",
+       "      <td>3siteSubSample_Scope1_Yokogawa_US_10X</td>\n",
+       "      <td>JUMP-MOA_compound_platemap</td>\n",
+       "      <td>BRO0117014_10x</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.124906</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.311965</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>Z06</td>\n",
+       "      <td>AGP, BrightField, DNA, ER, Mito, RNA</td>\n",
+       "      <td>18.604651</td>\n",
+       "      <td>0.310764</td>\n",
+       "      <td>1516909</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Vendor                                  Batch  \\\n",
+       "94   Yokogawa_US                 Scope1_Yokogawa_US_10X   \n",
+       "95   Yokogawa_US                 Scope1_Yokogawa_US_10X   \n",
+       "194  Yokogawa_US  1siteSubSample_Scope1_Yokogawa_US_10X   \n",
+       "195  Yokogawa_US  1siteSubSample_Scope1_Yokogawa_US_10X   \n",
+       "290  Yokogawa_US  2siteSubSample_Scope1_Yokogawa_US_10X   \n",
+       "291  Yokogawa_US  2siteSubSample_Scope1_Yokogawa_US_10X   \n",
+       "324  Yokogawa_US  3siteSubSample_Scope1_Yokogawa_US_10X   \n",
+       "325  Yokogawa_US  3siteSubSample_Scope1_Yokogawa_US_10X   \n",
+       "\n",
+       "                 Plate_Map_Name Assay_Plate_Barcode  Modality  \\\n",
+       "94   JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "95   JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "194  JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "195  JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "290  JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "291  JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "324  JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "325  JUMP-MOA_compound_platemap      BRO0117014_10x  Confocal   \n",
+       "\n",
+       "     Images_per_well  Sites-SubSampled  Binning  Magnification  \\\n",
+       "94                 4               NaN        1             10   \n",
+       "95                 4               NaN        1             10   \n",
+       "194                4               1.0        1             10   \n",
+       "195                4               1.0        1             10   \n",
+       "290                4               2.0        1             10   \n",
+       "291                4               2.0        1             10   \n",
+       "324                4               3.0        1             10   \n",
+       "325                4               3.0        1             10   \n",
+       "\n",
+       "     Number_of_channels  ...  Size_MB_std sphering value_95_replicating  \\\n",
+       "94                    6  ...     0.124906     True             0.218493   \n",
+       "95                    6  ...     0.124906    False             0.287125   \n",
+       "194                   6  ...     0.124906     True             0.165562   \n",
+       "195                   6  ...     0.124906    False             0.288096   \n",
+       "290                   6  ...     0.124906     True             0.170352   \n",
+       "291                   6  ...     0.124906    False             0.330511   \n",
+       "324                   6  ...     0.124906     True             0.184155   \n",
+       "325                   6  ...     0.124906    False             0.311965   \n",
+       "\n",
+       "     Percent_Replicating                         channel_names  \\\n",
+       "94             56.666667  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "95             47.777778  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "194            54.444444  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "195            38.888889  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "290            57.777778  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "291            37.777778  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "324            60.000000  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "325            40.000000  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "\n",
+       "    brightfield_z_plane_used                feature_channels_found  \\\n",
+       "94                       Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "95                       Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "194                      Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "195                      Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "290                      Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "291                      Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "324                      Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "325                      Z06  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "\n",
+       "     Percent_Matching  value_95_matching  cell_count  \n",
+       "94          23.255814           0.356314     2047342  \n",
+       "95          18.604651           0.353686     2047342  \n",
+       "194         18.604651           0.210178      518568  \n",
+       "195         13.953488           0.282212      518568  \n",
+       "290         23.255814           0.241135     1032116  \n",
+       "291         20.930233           0.339772     1032116  \n",
+       "324         23.255814           0.286397     1516909  \n",
+       "325         18.604651           0.310764     1516909  \n",
+       "\n",
+       "[8 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_rep_df[match_rep_df[\"Assay_Plate_Barcode\"].str.contains(\"BRO0117014\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
