updating figures and other data

--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[362 rows x 29 columns]"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,8 +535,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The lowest top %score (which is mean %rep %match) was Nikon. Highest top score was Molecular Devices\n",
+    "\n",
+    "The %score (max-min) ranges are as follows:\n",
+    "\n",
+    "PE: 40.9-39.1\n",
+    "Nikon: 38.8-31.3\n",
+    "Yokogawa_Japan: 43.9-33.7\n",
+    "Yokogawa_US: 45-36.5\n",
+    "MolDev: 45.5-38.2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -569,6 +585,7 @@
        "      <th>Z Planes</th>\n",
        "      <th>Spinning Disc</th>\n",
        "      <th>Sites</th>\n",
+       "      <th>Percent Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -583,6 +600,7 @@
        "      <td>1</td>\n",
        "      <td>no</td>\n",
        "      <td>9</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -595,6 +613,7 @@
        "      <td>3</td>\n",
        "      <td>yes</td>\n",
        "      <td>4</td>\n",
+       "      <td>98.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -607,6 +626,7 @@
        "      <td>1</td>\n",
        "      <td>no</td>\n",
        "      <td>4</td>\n",
+       "      <td>91.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -619,6 +639,7 @@
        "      <td>1</td>\n",
        "      <td>yes</td>\n",
        "      <td>4</td>\n",
+       "      <td>88.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -631,6 +652,7 @@
        "      <td>1</td>\n",
        "      <td>yes</td>\n",
        "      <td>9</td>\n",
+       "      <td>87.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -643,6 +665,7 @@
        "      <td>3</td>\n",
        "      <td>yes</td>\n",
        "      <td>4</td>\n",
+       "      <td>83.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -657,16 +680,16 @@
        "5      5  Confocal        1             20  0.75                   6   \n",
        "3      6  Confocal        1             20  0.75                   6   \n",
        "\n",
-       "   Z Planes Spinning Disc  Sites  \n",
-       "4         1            no      9  \n",
-       "2         3           yes      4  \n",
-       "0         1            no      4  \n",
-       "1         1           yes      4  \n",
-       "5         1           yes      9  \n",
-       "3         3           yes      4  "
+       "   Z Planes Spinning Disc  Sites  Percent Score  \n",
+       "4         1            no      9          100.0  \n",
+       "2         3           yes      4           98.8  \n",
+       "0         1            no      4           91.5  \n",
+       "1         1           yes      4           88.8  \n",
+       "5         1           yes      9           87.7  \n",
+       "3         3           yes      4           83.9  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +703,8 @@
     "    'Number_of_channels',\n",
     "    'z_plane',\n",
     "    'spinning-disc',\n",
-    "    'sites'\n",
+    "    'sites',\n",
+    "    \"Percent_Score\",\n",
     "]\n",
     "\n",
     "df = match_rep_df[\n",
@@ -700,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -734,11 +758,12 @@
        "      <th>Z Planes</th>\n",
        "      <th>Immersion</th>\n",
        "      <th>Sites</th>\n",
+       "      <th>Percent Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -749,9 +774,10 @@
        "      <td>12</td>\n",
        "      <td>water</td>\n",
        "      <td>9</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -762,6 +788,7 @@
        "      <td>1</td>\n",
        "      <td>water</td>\n",
        "      <td>9</td>\n",
+       "      <td>91.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -775,9 +802,10 @@
        "      <td>12</td>\n",
        "      <td>water</td>\n",
        "      <td>9</td>\n",
+       "      <td>90.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
        "      <td>4</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -788,6 +816,7 @@
        "      <td>12</td>\n",
        "      <td>dry</td>\n",
        "      <td>4</td>\n",
+       "      <td>88.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -801,6 +830,7 @@
        "      <td>12</td>\n",
        "      <td>water</td>\n",
        "      <td>9</td>\n",
+       "      <td>81.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -808,21 +838,21 @@
       ],
       "text/plain": [
        "   Place  Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
-       "1      1  Confocal        1             20  1.0                   5   \n",
-       "0      2  Confocal        1             20  1.0                   5   \n",
+       "2      1  Confocal        1             20  1.0                   5   \n",
+       "1      2  Confocal        1             20  1.0                   5   \n",
        "3      3  Confocal        1             20  1.0                   6   \n",
-       "2      4  Confocal        1             10  0.4                   6   \n",
+       "0      4  Confocal        1             10  0.4                   6   \n",
        "4      5  Confocal        1             40  1.0                   6   \n",
        "\n",
-       "   Simultaneous Excitation  Z Planes Immersion  Sites  \n",
-       "1                        2        12     water      9  \n",
-       "0                        2         1     water      9  \n",
-       "3                        4        12     water      9  \n",
-       "2                        2        12       dry      4  \n",
-       "4                        4        12     water      9  "
+       "   Simultaneous Excitation  Z Planes Immersion  Sites  Percent Score  \n",
+       "2                        2        12     water      9          100.0  \n",
+       "1                        2         1     water      9           91.3  \n",
+       "3                        4        12     water      9           90.0  \n",
+       "0                        2        12       dry      4           88.9  \n",
+       "4                        4        12     water      9           81.2  "
       ]
      },
-     "execution_count": 239,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,6 +868,7 @@
     "    'z_plane',\n",
     "    \"dry-immersion\",\n",
     "    'sites',\n",
+    "    \"Percent_Score\",\n",
     "\n",
     "]\n",
     "\n",
@@ -860,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -893,11 +924,12 @@
        "      <th>Z Planes</th>\n",
        "      <th>Immersion</th>\n",
        "      <th>Sites</th>\n",
+       "      <th>Percent Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -907,9 +939,10 @@
        "      <td>10</td>\n",
        "      <td>dry</td>\n",
        "      <td>9</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -919,6 +952,7 @@
        "      <td>12</td>\n",
        "      <td>dry</td>\n",
        "      <td>2</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -926,15 +960,15 @@
       ],
       "text/plain": [
        "   Place  Modality  Binning  Magnification    NA  Number Of Channels  \\\n",
-       "1      1  Confocal        1             20  0.75                   5   \n",
-       "0      2  Confocal        1             40  0.95                   5   \n",
+       "0      1  Confocal        1             20  0.75                   5   \n",
+       "1      2  Confocal        1             40  0.95                   5   \n",
        "\n",
-       "   Z Planes Immersion  Sites  \n",
-       "1        10       dry      9  \n",
-       "0        12       dry      2  "
+       "   Z Planes Immersion  Sites  Percent Score  \n",
+       "0        10       dry      9          100.0  \n",
+       "1        12       dry      2           77.0  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +982,8 @@
     "    'Number_of_channels',\n",
     "    'z_plane',\n",
     "    \"dry-immersion\",\n",
-    "    'sites'\n",
+    "    'sites',\n",
+    "    \"Percent_Score\",\n",
     "]\n",
     "\n",
     "df = match_rep_df[\n",
@@ -968,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1001,6 +1036,7 @@
        "      <th>Z Planes</th>\n",
        "      <th>Immersion</th>\n",
        "      <th>Sites</th>\n",
+       "      <th>Percent Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1015,6 +1051,7 @@
        "      <td>1</td>\n",
        "      <td>dry</td>\n",
        "      <td>9</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1027,6 +1064,7 @@
        "      <td>1</td>\n",
        "      <td>dry</td>\n",
        "      <td>1</td>\n",
+       "      <td>80.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1037,12 +1075,12 @@
        "1      1  Widefield        1             20  0.75                   4   \n",
        "0      2  Widefield        1             10  0.45                   4   \n",
        "\n",
-       "   Z Planes Immersion  Sites  \n",
-       "1         1       dry      9  \n",
-       "0         1       dry      1  "
+       "   Z Planes Immersion  Sites  Percent Score  \n",
+       "1         1       dry      9          100.0  \n",
+       "0         1       dry      1           80.7  "
       ]
      },
-     "execution_count": 242,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1094,8 @@
     "    'Number_of_channels',\n",
     "    'z_plane',\n",
     "    \"dry-immersion\",\n",
-    "    'sites'\n",
+    "    'sites',\n",
+    "    \"Percent_Score\",\n",
     "]\n",
     "\n",
     "df = match_rep_df[\n",
@@ -1076,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1109,11 +1148,12 @@
        "      <th>Z Planes</th>\n",
        "      <th>Immersion</th>\n",
        "      <th>Sites</th>\n",
+       "      <th>Percent Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>2</td>\n",
@@ -1123,9 +1163,10 @@
        "      <td>1</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>2</td>\n",
        "      <td>Widefield</td>\n",
        "      <td>1</td>\n",
@@ -1135,9 +1176,10 @@
        "      <td>1</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>99.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>2</td>\n",
@@ -1147,9 +1189,10 @@
        "      <td>3</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>98.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>4</td>\n",
        "      <td>Widefield</td>\n",
        "      <td>2</td>\n",
@@ -1159,6 +1202,7 @@
        "      <td>1</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>98.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1171,9 +1215,10 @@
        "      <td>3</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>98.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>6</th>\n",
        "      <td>6</td>\n",
        "      <td>Widefield</td>\n",
        "      <td>1</td>\n",
@@ -1183,9 +1228,10 @@
        "      <td>3</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>97.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>7</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -1195,6 +1241,7 @@
        "      <td>3</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>97.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1207,6 +1254,7 @@
        "      <td>1</td>\n",
        "      <td>water</td>\n",
        "      <td>3</td>\n",
+       "      <td>95.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1214,27 +1262,27 @@
       ],
       "text/plain": [
        "   Place   Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
-       "4      1   Confocal        2             20  1.0                   5   \n",
-       "2      2  Widefield        1             20  1.0                   5   \n",
-       "5      3   Confocal        2             20  1.0                   5   \n",
-       "6      4  Widefield        2             20  1.0                   5   \n",
+       "1      1   Confocal        2             20  1.0                   5   \n",
+       "4      2  Widefield        1             20  1.0                   5   \n",
+       "3      3   Confocal        2             20  1.0                   5   \n",
+       "5      4  Widefield        2             20  1.0                   5   \n",
        "7      5  Widefield        2             20  1.0                   5   \n",
-       "3      6  Widefield        1             20  1.0                   5   \n",
-       "1      7   Confocal        1             20  1.0                   5   \n",
+       "6      6  Widefield        1             20  1.0                   5   \n",
+       "2      7   Confocal        1             20  1.0                   5   \n",
        "0      8   Confocal        1             20  1.0                   5   \n",
        "\n",
-       "   Z Planes Immersion  Sites  \n",
-       "4         1     water      3  \n",
-       "2         1     water      3  \n",
-       "5         3     water      3  \n",
-       "6         1     water      3  \n",
-       "7         3     water      3  \n",
-       "3         3     water      3  \n",
-       "1         3     water      3  \n",
-       "0         1     water      3  "
+       "   Z Planes Immersion  Sites  Percent Score  \n",
+       "1         1     water      3          100.0  \n",
+       "4         1     water      3           99.6  \n",
+       "3         3     water      3           98.8  \n",
+       "5         1     water      3           98.6  \n",
+       "7         3     water      3           98.2  \n",
+       "6         3     water      3           97.5  \n",
+       "2         3     water      3           97.2  \n",
+       "0         1     water      3           95.5  "
       ]
      },
-     "execution_count": 243,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1296,8 @@
     "    'Number_of_channels',\n",
     "    'z_plane',\n",
     "    \"dry-immersion\",\n",
-    "    'sites'\n",
+    "    'sites',\n",
+    "    \"Percent_Score\",\n",
     "]\n",
     "\n",
     "df = match_rep_df[\n",
@@ -3571,7 +3620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 | packaged by conda-forge | (default, Mar 25 2022, 06:05:16) \n[Clang 12.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
