--- a/channel-bleedthrough.ipynb
+++ b/channel-bleedthrough.ipynb
@@ -899,38 +899,27 @@
     }
    ],
    "source": [
-    "def search_correlations(metadata_df, profile_path, aggregate_on=None):\n",
+    "def search_correlations(metadata_df, profile_path):\n",
     "    \"\"\"\n",
-    "    Reads *_normalized_feature_select_negcon_batch.csv.gz\n",
-    "    and performs a function on the dataframe \n",
+    "\n",
     "    \"\"\"\n",
     "    df_list = []\n",
     "    # metadata_df = metadata_df[~metadata_df[\"Batch\"].str.contains(\"siteSub\")]\n",
     "    df = metadata_df.copy()\n",
     "    df = df[~df[\"Batch\"].str.contains(\"siteSub\")]\n",
-    "    for ind, row in metadata_df.iterrows():\n",
+    "    for ind, row in df.iterrows():\n",
     "        df_path = os.path.join(profile_path, row[\"Batch\"], row[\"Assay_Plate_Barcode\"], f\"{row['Assay_Plate_Barcode']}.csv.gz\")\n",
     "        print(df_path)\n",
-    "        df_path = glob.glob(df_path)[0]\n",
     "        load_df = pd.read_csv(df_path)\n",
-    "        # cols = [i for i in load_df.columns if (\"Golgi\" in i and \"Actin\" in i and \"Costes\" in i) or \n",
-    "        #                                         (\"Golgi\" in i and \"DNA\" in i and \"Costes\" in i) or\n",
-    "        #                                         (\"Actin\" in i and \"DNA\" in i and \"Costes\" in i) or\n",
-    "        #                                         (\"AGP\" in i)\n",
-    "        #                                         ]\n",
     "        cols = [i for i in load_df.columns if \"Correlation\" in i]\n",
-    "        # cols = [i for i in load_df.columns if i in [\"Actin\", \"DNA\", \"ER\", \"Golgi\", \"Mito\", \"RNA\"]]\n",
+    "        # Mask data so we only gather the correlation features for aggregation\n",
     "        load_df = load_df[cols]\n",
-    "        # For the masked dataset (which represents one plate), aggregate all well values\n",
-    "        load_df.agg(np.mean)\n",
+    "        # For the masked dataset (which represents one plate), aggregate all well values. 384 rows will be aggregated into one.\n",
+    "        load_df = load_df.agg(np.mean).to_frame().transpose()\n",
     "        # Since the DF was masked by [cols], add back in the Batch, Assay_Plate_Barcode and channel_names, based on the row info\n",
     "        load_df[\"Batch\"], load_df[\"Assay_Plate_Barcode\"], load_df[\"channel_names\"] = [row[\"Batch\"], row[\"Assay_Plate_Barcode\"], row[\"channel_names\"]]\n",
     "        df_list.append(load_df)\n",
     "    out_df = pd.concat(df_list)\n",
-    "    # Once concatenated, aggregate all values based on channel_name grouping\n",
-    "    if aggregate_on is not None:\n",
-    "        out_df = out_df.groupby(\n",
-    "                            aggregate_on,as_index=False).agg(np.mean)\n",
     "    return out_df\n",
     "\n",
     "corr_df = search_correlations(experiment_df, \"../jump-scope/profiles/\")\n",
@@ -2530,7 +2519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 | packaged by conda-forge | (default, Mar 25 2022, 06:05:16) \n[Clang 12.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
