--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "[362 rows x 29 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,8 +732,22 @@
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>2</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>water</td>\n",
+       "      <td>9</td>\n",
+       "      <td>93.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
        "      <td>20</td>\n",
@@ -747,20 +761,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Confocal</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>water</td>\n",
-       "      <td>9</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>4</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -774,8 +774,22 @@
        "      <td>88.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>0</th>\n",
        "      <td>5</td>\n",
+       "      <td>Confocal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>water</td>\n",
+       "      <td>9</td>\n",
+       "      <td>86.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
        "      <td>40</td>\n",
@@ -794,17 +808,19 @@
       "text/plain": [
        "   Place  Modality  Binning  Magnification   NA  Number Of Channels  \\\n",
        "2      1  Confocal        1             20  1.0                   5   \n",
-       "1      2  Confocal        1             20  1.0                   5   \n",
-       "3      3  Confocal        1             20  1.0                   6   \n",
-       "0      4  Confocal        1             10  0.4                   6   \n",
-       "4      5  Confocal        1             40  1.0                   6   \n",
+       "4      2  Confocal        1             20  1.0                   6   \n",
+       "1      3  Confocal        1             20  1.0                   5   \n",
+       "3      4  Confocal        1             10  0.4                   6   \n",
+       "0      5  Confocal        1             20  1.0                   6   \n",
+       "5      6  Confocal        1             40  1.0                   6   \n",
        "\n",
        "   Simultaneous Excitation  Z Planes Immersion  Sites  Percent Score  \n",
        "2                        2        12     water      9          100.0  \n",
+       "4                        4        12     water      9           93.8  \n",
        "1                        2         1     water      9           91.3  \n",
-       "3                        4        12     water      9           90.0  \n",
-       "0                        2        12       dry      4           88.9  \n",
-       "4                        4        12     water      9           81.2  "
+       "3                        2        12       dry      4           88.9  \n",
+       "0                        1        12     water      9           86.2  \n",
+       "5                        4        12     water      9           81.2  "
       ]
      },
      "execution_count": 7,
@@ -839,7 +855,7 @@
     "\n",
     "assert not df.equals(df.drop(\"Place\", axis=1).drop_duplicates()), \"DataFrame contains duplicates\"\n",
     "\n",
-    "# df.to_csv(\"(2)-yokogawa_us_leaderboard.csv\", index=False)\n",
+    "df.to_csv(\"(2)-yokogawa_us_leaderboard.csv\", index=False)\n",
     "\n",
     "df"
    ]
@@ -3575,7 +3591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 | packaged by conda-forge | (default, Mar 25 2022, 06:05:16) \n[Clang 12.0.1 ]"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
