--- a/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
+++ b/notebooks/figures/leaderboard_tables/leaderboard_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "      <td>Scope1_MolDev_10X</td>\n",
        "      <td>JUMP-MOA_compound_platemap</td>\n",
        "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
-       "      <td>Confocal</td>\n",
+       "      <td>Widefield</td>\n",
        "      <td>4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -96,7 +96,7 @@
        "      <td>Scope1_MolDev_10X</td>\n",
        "      <td>JUMP-MOA_compound_platemap</td>\n",
        "      <td>Plate2_PCO_6ch_4site_10XPA</td>\n",
-       "      <td>Confocal</td>\n",
+       "      <td>Widefield</td>\n",
        "      <td>4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -332,7 +332,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>362 rows × 29 columns</p>\n",
+       "<p>362 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -349,18 +349,18 @@
        "360  Yokogawa_US   4siteSubSample_Scope1_Yokogawa_US_40X_BRO0117059   \n",
        "361  Yokogawa_US   4siteSubSample_Scope1_Yokogawa_US_40X_BRO0117059   \n",
        "\n",
-       "                 Plate_Map_Name                Assay_Plate_Barcode  Modality  \\\n",
-       "0    JUMP-MOA_compound_platemap         Plate2_PCO_6ch_4site_10XPA  Confocal   \n",
-       "1    JUMP-MOA_compound_platemap         Plate2_PCO_6ch_4site_10XPA  Confocal   \n",
-       "2    JUMP-MOA_compound_platemap   Plate3_PCO_6ch_4site_10XPA_Crest  Confocal   \n",
-       "3    JUMP-MOA_compound_platemap   Plate3_PCO_6ch_4site_10XPA_Crest  Confocal   \n",
-       "4    JUMP-MOA_compound_platemap  Plate3_PCO_6ch_4site_10XPA_Crestz  Confocal   \n",
-       "..                          ...                                ...       ...   \n",
-       "357  JUMP-MOA_compound_platemap                     BRO0117059_20X  Confocal   \n",
-       "358  JUMP-MOA_compound_platemap                    BRO01177034_20x  Confocal   \n",
-       "359  JUMP-MOA_compound_platemap                    BRO01177034_20x  Confocal   \n",
-       "360  JUMP-MOA_compound_platemap                     BRO0117059_40x  Confocal   \n",
-       "361  JUMP-MOA_compound_platemap                     BRO0117059_40x  Confocal   \n",
+       "                 Plate_Map_Name                Assay_Plate_Barcode   Modality  \\\n",
+       "0    JUMP-MOA_compound_platemap         Plate2_PCO_6ch_4site_10XPA  Widefield   \n",
+       "1    JUMP-MOA_compound_platemap         Plate2_PCO_6ch_4site_10XPA  Widefield   \n",
+       "2    JUMP-MOA_compound_platemap   Plate3_PCO_6ch_4site_10XPA_Crest   Confocal   \n",
+       "3    JUMP-MOA_compound_platemap   Plate3_PCO_6ch_4site_10XPA_Crest   Confocal   \n",
+       "4    JUMP-MOA_compound_platemap  Plate3_PCO_6ch_4site_10XPA_Crestz   Confocal   \n",
+       "..                          ...                                ...        ...   \n",
+       "357  JUMP-MOA_compound_platemap                     BRO0117059_20X   Confocal   \n",
+       "358  JUMP-MOA_compound_platemap                    BRO01177034_20x   Confocal   \n",
+       "359  JUMP-MOA_compound_platemap                    BRO01177034_20x   Confocal   \n",
+       "360  JUMP-MOA_compound_platemap                     BRO0117059_40x   Confocal   \n",
+       "361  JUMP-MOA_compound_platemap                     BRO0117059_40x   Confocal   \n",
        "\n",
        "     Images_per_well  Sites-SubSampled  Binning  Magnification  \\\n",
        "0                  4               NaN        1             10   \n",
@@ -375,44 +375,44 @@
        "360                9               4.0        1             40   \n",
        "361                9               4.0        1             40   \n",
        "\n",
-       "     Number_of_channels  ...  Size_MB_std sphering value_95_replicating  \\\n",
-       "0                     6  ...     0.000144     True             0.191908   \n",
-       "1                     6  ...     0.000144    False             0.269727   \n",
-       "2                     6  ...     0.000183     True             0.269617   \n",
-       "3                     6  ...     0.000183    False             0.329074   \n",
-       "4                     6  ...     0.000142     True             0.205121   \n",
-       "..                  ...  ...          ...      ...                  ...   \n",
-       "357                   6  ...     0.000583    False             0.628379   \n",
-       "358                   6  ...     0.000014     True             0.139090   \n",
-       "359                   6  ...     0.000014    False             0.666818   \n",
-       "360                   6  ...     0.080201     True             0.193787   \n",
-       "361                   6  ...     0.080201    False             0.331777   \n",
+       "     Number_of_channels  ...  Size_MB_std sphering  value_95_replicating  \\\n",
+       "0                     6  ...     0.000144     True              0.191908   \n",
+       "1                     6  ...     0.000144    False              0.269727   \n",
+       "2                     6  ...     0.000183     True              0.269617   \n",
+       "3                     6  ...     0.000183    False              0.329074   \n",
+       "4                     6  ...     0.000142     True              0.205121   \n",
+       "..                  ...  ...          ...      ...                   ...   \n",
+       "357                   6  ...     0.000583    False              0.628379   \n",
+       "358                   6  ...     0.000014     True              0.139090   \n",
+       "359                   6  ...     0.000014    False              0.666818   \n",
+       "360                   6  ...     0.080201     True              0.193787   \n",
+       "361                   6  ...     0.080201    False              0.331777   \n",
        "\n",
-       "     Percent_Replicating                         channel_names  \\\n",
-       "0              60.000000      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "1              53.333333      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "2              62.222222      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "3              45.555556      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "4              66.666667      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "..                   ...                                   ...   \n",
-       "357            20.000000  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "358            56.666667  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "359            21.111111  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "360            53.333333  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "361            36.666667  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "    Percent_Replicating                         channel_names  \\\n",
+       "0             60.000000      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "1             53.333333      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "2             62.222222      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "3             45.555556      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "4             66.666667      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "..                  ...                                   ...   \n",
+       "357           20.000000  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "358           56.666667  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "359           21.111111  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "360           53.333333  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "361           36.666667  AGP, BrightField, DNA, ER, Mito, RNA   \n",
        "\n",
-       "    brightfield_z_plane_used                feature_channels_found  \\\n",
-       "0                        NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "1                        NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "2                        NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "3                        NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "4                        NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
-       "..                       ...                                   ...   \n",
-       "357                      Z08  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "358                      Z17  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "359                      Z17  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "360                      Z08  AGP, BrightField, DNA, ER, Mito, RNA   \n",
-       "361                      Z08  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "     brightfield_z_plane_used                feature_channels_found  \\\n",
+       "0                         NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "1                         NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "2                         NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "3                         NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "4                         NaN      Actin, DNA, ER, Golgi, Mito, RNA   \n",
+       "..                        ...                                   ...   \n",
+       "357                       Z08  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "358                       Z17  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "359                       Z17  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "360                       Z08  AGP, BrightField, DNA, ER, Mito, RNA   \n",
+       "361                       Z08  AGP, BrightField, DNA, ER, Mito, RNA   \n",
        "\n",
        "     Percent_Matching  value_95_matching  cell_count  \n",
        "0           23.255814           0.288099     2014937  \n",
@@ -427,10 +427,10 @@
        "360         20.930233           0.234702      116595  \n",
        "361         13.953488           0.336164      116595  \n",
        "\n",
-       "[362 rows x 29 columns]"
+       "[362 rows x 28 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,27 +538,25 @@
        "      <th>NA</th>\n",
        "      <th>Number Of Channels</th>\n",
        "      <th>Z Planes</th>\n",
-       "      <th>Spinning Disc</th>\n",
        "      <th>Sites</th>\n",
        "      <th>Percent Score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "      <td>1</td>\n",
-       "      <td>Confocal</td>\n",
+       "      <td>Widefield</td>\n",
        "      <td>1</td>\n",
        "      <td>20</td>\n",
        "      <td>0.75</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>no</td>\n",
        "      <td>9</td>\n",
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -566,25 +564,23 @@
        "      <td>0.45</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>yes</td>\n",
        "      <td>4</td>\n",
        "      <td>98.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Confocal</td>\n",
+       "      <td>Widefield</td>\n",
        "      <td>1</td>\n",
        "      <td>10</td>\n",
        "      <td>0.45</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>no</td>\n",
        "      <td>4</td>\n",
        "      <td>91.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>4</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -592,12 +588,11 @@
        "      <td>0.45</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>yes</td>\n",
        "      <td>4</td>\n",
        "      <td>88.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>Confocal</td>\n",
        "      <td>1</td>\n",
@@ -605,7 +600,6 @@
        "      <td>0.75</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>yes</td>\n",
        "      <td>9</td>\n",
        "      <td>87.7</td>\n",
        "    </tr>\n",
@@ -618,7 +612,6 @@
        "      <td>0.75</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
-       "      <td>yes</td>\n",
        "      <td>4</td>\n",
        "      <td>83.9</td>\n",
        "    </tr>\n",
@@ -627,21 +620,21 @@
        "</div>"
       ],
       "text/plain": [
-       "   Place  Modality  Binning  Magnification    NA  Number Of Channels  \\\n",
-       "4      1  Confocal        1             20  0.75                   6   \n",
-       "2      2  Confocal        1             10  0.45                   6   \n",
-       "0      3  Confocal        1             10  0.45                   6   \n",
-       "1      4  Confocal        1             10  0.45                   6   \n",
-       "5      5  Confocal        1             20  0.75                   6   \n",
-       "3      6  Confocal        1             20  0.75                   6   \n",
+       "   Place   Modality  Binning  Magnification    NA  Number Of Channels  \\\n",
+       "5      1  Widefield        1             20  0.75                   6   \n",
+       "1      2   Confocal        1             10  0.45                   6   \n",
+       "2      3  Widefield        1             10  0.45                   6   \n",
+       "0      4   Confocal        1             10  0.45                   6   \n",
+       "4      5   Confocal        1             20  0.75                   6   \n",
+       "3      6   Confocal        1             20  0.75                   6   \n",
        "\n",
-       "   Z Planes Spinning Disc  Sites  Percent Score  \n",
-       "4         1            no      9          100.0  \n",
-       "2         3           yes      4           98.8  \n",
-       "0         1            no      4           91.5  \n",
-       "1         1           yes      4           88.8  \n",
-       "5         1           yes      9           87.7  \n",
-       "3         3           yes      4           83.9  "
+       "   Z Planes  Sites  Percent Score  \n",
+       "5         1      9          100.0  \n",
+       "1         3      4           98.8  \n",
+       "2         1      4           91.5  \n",
+       "0         1      4           88.8  \n",
+       "4         1      9           87.7  \n",
+       "3         3      4           83.9  "
       ]
      },
      "execution_count": 6,
@@ -657,7 +650,6 @@
     "    'aperture',\n",
     "    'Number_of_channels',\n",
     "    'z_plane',\n",
-    "    'spinning-disc',\n",
     "    'sites',\n",
     "    \"Percent_Score\",\n",
     "]\n",
