--- a/notebooks/figures/figure5/figure5.ipynb
+++ b/notebooks/figures/figure5/figure5.ipynb
@@ -15,16 +15,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -45,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "match_rep_df = pd.read_csv(\"/Users/ctromans/image-analysis/jump_scope/jump-scope-analysis/checkpoints/match_rep_df.csv\")"
+    "match_rep_df = pd.read_csv(\"../../../checkpoints/match_rep_df.csv\")"
    ]
   },
   {
@@ -862,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +895,7 @@
     "\n",
     "    return fig\n",
     "\n",
-    "img_dir = \"/Users/ctromans/image-analysis/jump_scope/jump-scope-analysis/notebooks/figures/figure5/yokogawa_US_20x_2x\"\n",
+    "img_dir = \"./2x_simultaneous\"\n",
     "\n",
     "img_paths = sorted([os.path.join(root, file) for root, dirs, files in os.walk(img_dir) for file in files], key=lambda x: x.split()[0][-7:])\n",
     "\n",
@@ -915,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +921,7 @@
     }
    ],
    "source": [
-    "img_dir = \"/Users/ctromans/image-analysis/jump_scope/jump-scope-analysis/notebooks/figures/figure5/yokogawa_US_20x_4x\"\n",
+    "img_dir = \"./4x_simultaneous\"\n",
     "\n",
     "img_paths = sorted([os.path.join(root, file) for root, dirs, files in os.walk(img_dir) for file in files], key=lambda x: x.split()[0][-7:])\n",
     "\n",
