marker selection and more

--- a/notebooks/figures/supplementary/FigureS7.ipynb
+++ b/notebooks/figures/supplementary/FigureS7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "[362 rows x 28 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -518,12 +518,14 @@
     "        plot_title=vendor_name,\n",
     "        xlabel=\"KS Test pvalue\",\n",
     "        ylabel=\"Normalized Density\"\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "fig.savefig(\"(S7A)-feature_density.png\", dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
